[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://scenes/revolver.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/shotgun.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.0824176, 1 ), -0.00835628, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
width = 64
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 1.0
flag_align_y = true
direction = Vector3( 0, 0, 1 )
spread = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 4.0
scale_curve = SubResource( 3 )

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true

[sub_resource type="CubeMesh" id=6]
material = SubResource( 5 )
size = Vector3( 0.01, 0.5, 0.01 )

[node name="player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, -0.0106483, 1.5, -0.00129843 )
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
current = true
fov = 80.0
near = 0.01
far = 1000.0

[node name="crosshair" type="Spatial" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.38438 )

[node name="default_position" type="Spatial" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.387342, -0.217273, -0.510463 )

[node name="grab_position" type="Spatial" parent="Camera"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.603378, -0.217273, -0.0447289 )

[node name="slide_position" type="Spatial" parent="Camera"]
transform = Transform( 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, 0.387342, -0.217273, -0.510463 )

[node name="zoom_position" type="Spatial" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.157 )

[node name="revolver" parent="Camera" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.387342, -0.217273, -0.510463 )

[node name="shotgun" parent="Camera" instance=ExtResource( 3 )]
visible = false

[node name="Particles" type="Particles" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.93418 )
visible = false
amount = 16
process_material = SubResource( 4 )
draw_pass_1 = SubResource( 6 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
enabled = true
cast_to = Vector3( 0, -0.2, 0 )

[node name="stats" type="Control" parent="."]
anchor_top = 0.5
anchor_right = 0.3
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="stats"]
anchor_right = 1.0
anchor_bottom = 1.0
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
